--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -19,8 +19,14 @@
                         <div class="card-header">
                             <div class="justify-content-between align-items-center">
                                 <h4 class="mb-0">Secrets
-                                    <a href="https://perforge.app/docs/configuration/secrets" class="fa-regular fa-circle-question" data-bs-toggle="tooltip" data-bs-placement="right" target="_blank" title="Click to learn more">
-                                    </a>
+                                    <div class="tooltip-container">
+                                        <a href="https://perforge.app/docs/configuration/secrets" target="_blank">
+                                            <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                        </a>
+                                        <div class="tooltip-content" style="font-size: 16px;">
+                                            Click to learn more
+                                        </div>
+                                    </div>
                                 </h4>
                             </div>
                         </div>
