--- a/app/templates/integrations/azure.html
+++ b/app/templates/integrations/azure.html
@@ -17,9 +17,15 @@
                     <div class="card-header">
                         <div class="justify-content-between align-items-center">
                             <h4 class="mb-0">Azure integration
-                                <a href="https://perforge.app/docs/configuration/integrations#azure-wiki" class="fa-regular fa-circle-question" data-bs-toggle="tooltip" data-bs-placement="right" target="_blank" title="Click to learn more">
-                                </a>
-                          </h4>
+                                <div class="tooltip-container">
+                                  <a href="https://perforge.app/docs/configuration/integrations#azure-wiki" target="_blank">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                  </a>
+                                  <div class="tooltip-content" style="font-size: 16px;">
+                                      Click to learn more
+                                  </div>
+                                </div>
+                            </h4>
                         </div>
                     </div>
                     <div class="card-body">
@@ -33,7 +39,12 @@
                                 {% endif %}
                                 <label for="name">Name:</label>
                                 {{ form.name(class="form-control") }}
-                                <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;."></span>
+                                <div class="tooltip-container">
+                                  <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                  <div class="tooltip-content">
+                                    To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;.
+                                  </div>
+                                </div>
                                 <label for="token" class="input-label mt-2">Token:</label>
                                 {{ form.token(class="form-control") }}
                                 <label for="org_url" class="mt-2">Wiki Organization Url:</label>
