--- a/app/templates/home/prompts.html
+++ b/app/templates/home/prompts.html
@@ -16,8 +16,14 @@
           <div class="card-header">
             <div class="justify-content-between align-items-center">
               <h4 class="mb-0">Prompts
-                <a href="https://perforge.app/docs/configuration/prompts" class="fa-regular fa-circle-question" data-bs-toggle="tooltip" data-bs-placement="right" target="_blank" title="Click to learn more">
-                </a>
+                <div class="tooltip-container">
+                  <a href="https://perforge.app/docs/configuration/prompts" target="_blank">
+                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                  </a>
+                  <div class="tooltip-content" style="font-size: 16px;">
+                      Click to learn more
+                  </div>
+                </div>
               </h4>
             </div>
           </div>
