--- a/app/templates/home/template-group.html
+++ b/app/templates/home/template-group.html
@@ -22,7 +22,14 @@
                             <div class="row flex-between-end pl-5 pr-5">
                                 <div class="col-auto">
                                     <h2 class="mb-2">Template group page
-                                        <a href="https://perforge.app/docs/configuration/template_groups" class="fa-regular fa-circle-question" data-bs-toggle="tooltip" data-bs-placement="right" target="_blank" title="Click to learn more"></a>
+                                        <div class="tooltip-container">
+                                          <a href="https://perforge.app/docs/configuration/template_groups" target="_blank">
+                                              <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                          </a>
+                                          <div class="tooltip-content" style="font-size: 20px;">
+                                              Click to learn more
+                                          </div>
+                                        </div>
                                     </h2>
                                 </div>
                                 <div class="col-auto">
@@ -72,7 +79,7 @@
                                                     <input v-model="name" id="template-name" class="form-control" type="text" required>              
                                                 </div>
                                                 <div class="margin-all-10">
-                                                    <label>Add template</label>
+                                                    <label>Add templates</label>
                                                     <v-select class="vue-select-imput" :options="templates" label="name" @input="addTemplateElement" required></v-select>
                                                 </div>
                                             </div>
