--- a/app/templates/integrations/grafana.html
+++ b/app/templates/integrations/grafana.html
@@ -17,8 +17,14 @@
                         <div class="card-header">
                             <div class="justify-content-between align-items-center">
                                 <h4 class="mb-0">Grafana integration
-                                    <a href="https://perforge.app/docs/configuration/integrations#grafana" class="fa-regular fa-circle-question" data-bs-toggle="tooltip" data-bs-placement="right" target="_blank" title="Click to learn more">
-                                    </a>
+                                    <div class="tooltip-container">
+                                      <a href="https://perforge.app/docs/configuration/integrations#grafana" target="_blank">
+                                          <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      </a>
+                                      <div class="tooltip-content" style="font-size: 16px;">
+                                          Click to learn more
+                                      </div>
+                                    </div>
                                 </h4>
                             </div>
                         </div>
@@ -37,22 +43,42 @@
                                     <label for="server" class="input-label mt-2">Server:</label>
                                     {{ form.server(id='server', class_='form-control') }}
                                     
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;."></span>
+                                    <div class="tooltip-container">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      <div class="tooltip-content">
+                                        To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;.
+                                      </div>
+                                    </div>
                                     <label for="token" class="input-label mt-2">Token:</label>
                                     {{ form.token(class="form-control") }}
                                     
                                     <label for="org_id" class="input-label mt-2">Organization ID:</label>
                                     {{ form.org_id(id='org_id', class_='form-control') }}
                                     
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="The variable name used to select the test title for querying the results. 'testTitle' is default."></span>
+                                    <div class="tooltip-container">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      <div class="tooltip-content">
+                                        The variable name used to select the test title for querying the results. 'testTitle' is default.
+                                      </div>
+                                    </div>
                                     <label for="test_title" class="input-label mt-2">Test title tag:</label>
                                     {{ form.test_title(id='test_title', class_='form-control') }}
                                     
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="The variable name used to select the app name for querying the results. 'app' is default."></span>
+                                    <div class="tooltip-container">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      <div class="tooltip-content">
+                                        The variable name used to select the app name for querying the results. 'app' is default.
+                                      </div>
+                                    </div>
                                     <label for="app" class="input-label mt-2">App name tag:</label>
                                     {{ form.app(id='app', class_='form-control') }}
                                     
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="The variable name used to select the baseline test title for querying the results. It is used on comparison dashboard. 'baseline_testTitle' is default."></span>
+                                    <div class="tooltip-container">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      <div class="tooltip-content">
+                                        The variable name used to select the baseline test title for querying the results. It is used on comparison dashboard. 'baseline_testTitle' is default.
+                                      </div>
+                                    </div>
                                     <label for="baseline_test_title" class="input-label mt-2">Baseline test title tag:</label>
                                     {{ form.baseline_test_title(id='baseline_test_title', class_='form-control') }}
 
