--- a/app/templates/integrations/influxdb.html
+++ b/app/templates/integrations/influxdb.html
@@ -17,8 +17,14 @@
                         <div class="card-header">
                             <div class="justify-content-between align-items-center">
                                 <h4 class="mb-0">Influxdb integration
-                                    <a href="https://perforge.app/docs/configuration/integrations#influxdb" class="fa-regular fa-circle-question" data-bs-toggle="tooltip" data-bs-placement="right" target="_blank" title="Click to learn more">
-                                    </a>
+                                    <div class="tooltip-container">
+                                      <a href="https://perforge.app/docs/configuration/integrations#influxdb" target="_blank">
+                                          <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      </a>
+                                      <div class="tooltip-content" style="font-size: 16px;">
+                                          Click to learn more
+                                      </div>
+                                    </div>
                                 </h4>
                             </div>
                         </div>
@@ -37,14 +43,24 @@
                                     {{ form.url(class="form-control") }}
                                     <label for="org_id" class="mt-2">Org:</label>
                                     {{ form.org_id(class="form-control") }}
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;."></span>
+                                    <div class="tooltip-container">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      <div class="tooltip-content">
+                                        To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;.
+                                      </div>
+                                    </div>
                                     <label for="token" class="input-label mt-2">Token:</label>
                                     {{ form.token(class="form-control") }}
                                     <label for="timeout" class="mt-2">Timeout:</label>
                                     {{ form.timeout(class="form-control") }}
                                     <label for="bucket" class="mt-2">Bucket:</label>
                                     {{ form.bucket(class="form-control") }}
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="Please be aware that the default listener for JMeter is the first one, while the second one is a custom listener provided by mderevyandoaqa."></span>
+                                    <div class="tooltip-container">
+                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                      <div class="tooltip-content">
+                                        Please be aware that the default listener for JMeter is the first one, while the second one is a custom listener provided by mderevyandoaqa.
+                                      </div>
+                                    </div>
                                     <label for="listener" class="input-label mt-2">Backend listener:</label>
                                     {{ form.listener(class="form-control") }}
                                     <label for="is_default" class="mt-2">Is Default:</label>
