--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <div id="secrets" data-list='{"valueNames":["key", "actions"], "page": 5, "pagination": true}'>
+                            <div id="secrets">
                                 <div class="d-flex align-items-center justify-content-end mb-3">
                                     <div class="d-flex">
                                         <a class="btn btn-primary ms-2" type="button" href="/add_secret">Add secret</a>
@@ -74,18 +74,6 @@
                                             {% endfor %}
                                         </tbody>
                                     </table>
-                                </div>
-                                <div class="d-flex justify-content-between mt-3 fs--1">
-                                    <span data-list-info="data-list-info"></span>
-                                    <div class="d-flex">
-                                        <button class="page-link" data-list-pagination="prev">
-                                            <span class="fas fa-chevron-left"></span>
-                                        </button>
-                                        <ul class="mb-0 pagination"></ul>
-                                        <button class="page-link pe-0" data-list-pagination="next">
-                                            <span class="fas fa-chevron-right"></span>
-                                        </button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
