PF-159: Added secret type

--- a/app/templates/home/secret.html
+++ b/app/templates/home/secret.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="card-body">
                             {% if secret_id %}
-                                <form method="POST" action="/edit_secret">
+                                <form method="POST" action="/update_secret">
                             {% else %}
                                 <form method="POST" action="/add_secret">
                             {% endif %}
@@ -38,8 +38,10 @@
                                 <div class="center-section">
                                     {% if secret_id %}
                                         <input type="hidden" name="id" id="config_id" value="{{ secret_id }}">
+                                        <input type="hidden" name="type" id="config_type" value="{{ secret_type }}">
                                     {% else %}
                                         <input type="hidden" name="id" id="config_id" value="">
+                                        <input type="hidden" name="type" id="config_type" value="">
                                     {% endif %}
                                     <label for="key">Key:</label>
                                     {{ form.key(class="form-control") }}
@@ -66,7 +68,7 @@
                                   </div>
                                   <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <a class="btn btn-danger" href="/delete/secret?secret_id={{ secret_id }}">Confirm Delete</a>
+                                    <a class="btn btn-danger" href="/delete/secret?secret_id={{ secret_id }}&secret_type={{ secret_type }}">Confirm Delete</a>
                                   </div>
                                 </div>
                               </div>
