--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -42,6 +42,7 @@
                                         <thead>
                                             <tr>
                                                 <th class="sort" data-sort="key">Key</th>
+                                                <th class="sort" data-sort="type">Type</th>
                                                 <th class="sort" data-sort="actions">Actions</th>
                                             </tr>
                                         </thead>
@@ -49,8 +50,9 @@
                                             {% for secret in secrets %}
                                             <tr>
                                                 <td class="key">{{ secret.key }}</td>
+                                                <td class="type">{{ secret.type }}</td>
                                                 <td class="actions" style="width: 20%;">
-                                                    <a class="btn btn-secondary" href="/edit_secret?secret_id={{ secret.id }}">Edit</a>
+                                                    <a class="btn btn-secondary" href="/edit_secret?secret_id={{ secret.id }}&secret_type={{ secret.type }}">Edit</a>
                                                     <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal{{ secret.id }}">Delete</a>
                                                 </td>
                                             </tr>
@@ -66,7 +68,7 @@
                                                   </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                                    <a class="btn btn-danger" href="/delete/secret?secret_id={{ secret.id }}">Confirm Delete</a>
+                                                    <a class="btn btn-danger" href="/delete/secret?secret_id={{ secret.id }}&secret_type={{ secret.type }}">Confirm Delete</a>
                                                   </div>
                                                 </div>
                                               </div>
