PF-161: Views code refactoring

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -21,7 +21,7 @@
                         <div class="card-body">
                             <p class="text-info fs-2-5 fw-bold mb-0">{{ project_stats.templates }} <span class="fs-0 text-900 lh-lg">templates</span></p>
                             <div class="flex-end">
-                              <a class="badge badge-success" href="{{ url_for('get_reporting') }}">add new</a>
+                              <a class="badge badge-success" href="{{ url_for('get_templates') }}">add new</a>
                             </div>
                         </div>
                       </div>
