PF-163: Fixed bug with / and added custom tags to graphs

--- a/app/templates/home/graphs.html
+++ b/app/templates/home/graphs.html
@@ -157,6 +157,10 @@
                     {{ form_for_graphs.height(class="form-control") }} 
                 </div>
                 <div class="mt-3">
+                    <label class="mt-3">Custom vars</label>
+                    {{ form_for_graphs.custom_vars(class="form-control") }} 
+                </div>
+                <div class="mt-3">
                     <label>Prompt (optional)</label>
                     <select class="form-select" id="prompt_id" name="prompt_id">
                         <option value="" selected>Select a prompt</option>
