--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -2715,3 +2715,78 @@ textarea:focus  {
 .secondary-text {
     color: #8e8e8e;
 }
+
+/* REPORT PAGE STYLE */
+@keyframes flash {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.2;
+    }
+}
+
+.chart-container {
+    width: 100%;
+    height: 300px;
+}
+
+.graph-container {
+    display: none;
+}
+
+.dropdown-btn {
+    cursor: pointer;
+    padding: 5px 10px 5px 10px !important;
+}
+
+.loading-screen {
+    position: fixed;
+    /* Change to fixed to ensure it stays in place while scrolling */
+    top: 0;
+    left: 170px;
+    /* Adjust this value based on the width of your sidebar */
+    width: calc(100% - 170px);
+    /* Adjust this value based on the width of your sidebar */
+    height: 100%;
+    background-color: var(--bs-gradient);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    z-index: 9999;
+    /* Ensure it covers everything */
+}
+
+.loading-message {
+    font-size: 1.5em;
+    color: var(--text-main-color);
+    text-align: center;
+    animation: flash 2s infinite;
+    /* Apply the flashing animation */
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;  /* Adjust this value as per your needs */
+    width: 150px;   /* Adjust this value as per your needs */
+}
+@keyframes spark-appear {
+    0%,
+    63.9% {
+        opacity: 0;
+    }
+    64%,
+    100% {
+        opacity: 1;
+    }
+}
+
+#spark {
+    animation: spark-appear 1s linear infinite;
+}
