--- a/app/templates/home/tests.html
+++ b/app/templates/home/tests.html
@@ -142,33 +142,36 @@
         </div>
         <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
-            $(document).ready(function(){
-
+            $(document).ready(function() {
                 const influxdb_select = document.getElementById("influxdbId");
                 influxdb_select.addEventListener("change", loadData);
-
+        
                 const templates = JSON.parse('{{ templates | tojson }}');
-                if (!templates){
+                if (!templates) {
                     templates = []
                 }
-
+        
                 loadData();
-
-                function loadData(){
+        
+                function loadData() {
                     var influxdb = $("#influxdbId").val();
-                    $("#spinner").show()
+                    $("#spinner").show();
                     perforge.utils
                         .sendGetRequest('/load_tests?influxdb=' + influxdb)
                         .then((data) => {
-                            if(data.status === 'success'){
+                            if (data.status === 'success') {
                                 updateTable(data.tests);
-                            }else{
+                            } else {
                                 const badmsg = document.getElementById("bad-msg");
                                 badmsg.style.display = "flex";
                                 const msg = badmsg.querySelector("#msg");
                                 msg.textContent = data.message;
                             }
                             $("#spinner").hide();
+        
+                            // Initialize List.js after updating the table
+                            perforge.utils.listInit();
+
                         })
                         .catch((error) => {
                             const badmsg = document.getElementById("bad-msg");
@@ -178,32 +181,33 @@
                             $("#spinner").hide();
                         });
                 }
-
+        
                 function updateTable(tests) {
                     $("#table-id").attr('data-list', '{"valueNames":["test_title", "testName", "duration", "maxThreads", "startTime", "endTime"], "page": 10, "pagination": true}');
-
+        
                     var tableBody = document.getElementById("bulk-select-body");
                     tableBody.innerHTML = ''; // Clear the table body
-
+        
                     tests.forEach(function(test) {
                         const row = tableBody.insertRow();
-
+        
                         // Insert the checkbox column
                         const checkboxCell = row.insertCell();
                         const checkboxDiv = document.createElement("div");
                         checkboxDiv.className = "form-check fs-0";
                         checkboxDiv.innerHTML = `<input class="form-check-input" type="checkbox" data-bulk-select-row='{"test_title":"${test.test_title}","testName":"${test.testName}","duration":"${test.duration}","maxThreads":"${test.maxThreads}","startTime":"${test.startTime}","endTime":"${test.endTime}"}' />`;
                         checkboxCell.appendChild(checkboxDiv);
-
+        
                         // Insert cells for each column based on your data structure
                         const runIdCell = row.insertCell();
+                        runIdCell.className = "test_title"; // Add class for sorting
                         runIdCell.textContent = test.test_title;
-
+        
                         // Create and insert the Test ID dropdown
                         const templateIdCell = row.insertCell();
                         const selectTemplate = document.createElement("select");
                         selectTemplate.className = "form-select";
-
+        
                         // Create a default "Choose for comparison" option
                         const defaultTemplateOption = document.createElement("option");
                         defaultTemplateOption.value = "no data"; // Set an empty value for the default option
@@ -217,7 +221,7 @@
                             selectTemplate.appendChild(option);
                         });
                         templateIdCell.appendChild(selectTemplate);
-
+        
                         selectTemplate.addEventListener('change', (event) => {
                             const value = event.target.value;
                             const checkbox = checkboxDiv.querySelector('input[data-bulk-select-row]');
@@ -225,32 +229,37 @@
                             checkboxData['template_id'] = value;
                             checkbox.setAttribute('data-bulk-select-row', JSON.stringify(checkboxData))
                         });
-
+        
                         // Insert Test Name (modify as needed)
                         const testNameCell = row.insertCell();
+                        testNameCell.className = "testName"; // Add class for sorting
                         testNameCell.textContent = test.testName;
-
+        
                         // Insert Duration (modify as needed)
                         const durationCell = row.insertCell();
+                        durationCell.className = "duration"; // Add class for sorting
                         durationCell.textContent = test.duration;
-
+        
                         // Insert Max Threads (modify as needed)
                         const maxThreadsCell = row.insertCell();
+                        maxThreadsCell.className = "maxThreads"; // Add class for sorting
                         maxThreadsCell.textContent = test.maxThreads;
-
+        
                         // Insert Start Time (modify as needed)
                         const startTimeCell = row.insertCell();
+                        startTimeCell.className = "startTime"; // Add class for sorting
                         startTimeCell.textContent = test.startTime;
-
+        
                         // Insert End Time (modify as needed)
                         const endTimeCell = row.insertCell();
+                        endTimeCell.className = "endTime"; // Add class for sorting
                         endTimeCell.textContent = test.endTime;
-
+        
                         // Create and insert the Test ID dropdown
                         const testIdCell = row.insertCell();
                         const select = document.createElement("select");
                         select.className = "form-select";
-
+        
                         // Create a default "Choose for comparison" option
                         const defaultOption = document.createElement("option");
                         defaultOption.value = "no data"; // Set an empty value for the default option
@@ -264,7 +273,7 @@
                             select.appendChild(option);
                         });
                         testIdCell.appendChild(select);
-
+        
                         select.addEventListener('change', (event) => {
                             const value = event.target.value;
                             const checkbox = checkboxDiv.querySelector('input[data-bulk-select-row]');
@@ -273,16 +282,14 @@
                             checkbox.setAttribute('data-bulk-select-row', JSON.stringify(checkboxData))
                         });
                     });
-
-                    perforge.utils.listInit();
                 }
             });
-
+        
             async function checkVersion() {
                 const response = await fetch('/check_new_version');
                 const data = await response.json();
                 const versionInfo = document.getElementById('version-info');
-
+        
                 if (data.new_version_released) {
                     versionInfo.innerHTML = `
                         New version is available:<span class="text-primary fw-bold ms-2">${data.new_version}</span>
